tests/transpiler/x/fortran/for_loop.f90
program main
  implicit none
  integer :: i

  do i = 1, 4 - 1
    print '(I0)', i
  end do
end program main
